# higt-bot-code

./: .gitignore  HiGT-Bot_Implementation_Plan.md  README.md  pyproject.toml
configs/: phase5.yaml  phase6.yaml  split.yaml
data/: README.md
data/inspection_logs/: FINAL_MODEL.md  baseline_gat.json  baseline_gin.json  baseline_gine.json  baseline_gine_matched.json  baseline_rf.json  baseline_xgb.json  bot_profile_147.32.84.205.txt  ctu13_scenario10.txt  ctu13_scenario11.txt  ctu13_scenario9.txt  iot23_capture1-1.txt  iot23_capture48-1.txt  medbiot_all_malware.txt  medbiot_bashlite_mal_CC.txt  phase5_calibrated.json  phase5_results.md  phase5_skip_calibrated.json  phase5_temporal_gine.json  phase5_temporal_gine_skip.json  phase5_temporal_gine_skip_smoke.json  phase5_temporal_gine_ssl_init.json  phase6_diffpool.json  phase6_diffpool_sha.json  phase6_diffpool_sha_smoke.json  phase6_diffpool_ssl.json  phase6_diffpool_ssl_ft.json  phase6_diffpool_tam.json  phase6_diffpool_tam_bal.json  phase6_diffpool_tam_smoke.json  phase6_graphsha_findings.md  phase6_results.md  phase6_sparse_baseline.json  phase6_sparse_smoke.json  phase6_sparse_ssl_ft.json  phase6_ssl_sparse_findings.md  phase6_tam_findings.md  phase7_findings.md  phase7_higt_bot_edge.json  phase7_higt_bot_edge_seed1.json  (+17 more)
scripts/: analyze_regressions.py  bot_traffic_profile.py  build_flow_sequences.py  build_graphs.py  cache_embeddings.py  cache_embeddings_ssl.py  calibrate_thresholds.py  download_data.ps1  download_data.sh  parse_all.py  phase8_ablation_table.py  phase8_efficiency.py  phase8_interpretability.py  phase8_robustness.py  phase8_seed_summary.py  pretrain_encoder.py  sanity_check_rf.py  smoke_test.py  train_phase5.py  train_phase6.py  train_phase6_sparse.py  train_phase7.py  visualize_graph.py
scripts/baselines/: run_gnn.py  run_rf.py  run_xgb.py
src/data/: build_flow_seq_streaming.py  build_graphs_streaming.py  dataset.py  embedding_dataset.py  features.py  flow_seq.py  flow_seq_dataset.py  graph.py  inspect.py  parse_ctu13.py  parse_iot23.py  parse_medbiot.py  schema.py  window.py
src/models/: diffpool.py  gnn_baselines.py  higt_bot.py  hybrid.py  sparse_pool.py  temporal.py
src/training/: evaluate.py  graphsha.py  loop.py  loop_phase5.py  pretrain_ssl.py  tam_loss.py
src/utils/: seeding.py
tests/: test_dataset.py  test_evaluate.py  test_flow_seq.py  test_graph.py  test_hybrid.py  test_inspect.py  test_loop.py  test_parsers.py  test_temporal.py
