[project]
name = "higt-bot"
version = "0.1.0"
description = "Hierarchical Graph-Transformer Learning for P2P Botnet Detection in IoT Networks"
requires-python = ">=3.11,<3.12"
dependencies = [
    "hydra-core==1.3.2",
    "matplotlib==3.9.2",
    "networkx==3.3",
    "nfstream==6.5.3",
    "numpy<2",
    "pandas==2.2.3",
    "pyarrow==17.0.0",
    "scikit-learn==1.5.2",
    "seaborn==0.13.2",
    "torch==2.11.0",
    "torch-geometric==2.7.0",
    "torch-scatter",
    "torch-sparse",
    "torchvision==0.26.0",
    "tqdm==4.66.5",
    "wandb==0.18.5",
    "xgboost>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "SIM"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "ruff>=0.6",
]

# Windows/Linux: use PyTorch CUDA wheels from their index (PyPI serves CPU-only on Windows).
# CUDA 12.8 wheels include Blackwell (sm_120); still far ahead of the original thesis torch==2.4.1 pin.
# macOS: no CUDA wheels; these sources are skipped and torch comes from PyPI (MPS/CPU).
# https://docs.astral.sh/uv/guides/integration/pytorch/
[tool.uv]
find-links = [
    "https://data.pyg.org/whl/torch-2.11.0+cu128.html",
    "https://data.pyg.org/whl/torch-2.11.0+cpu.html",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
